frontend/tests/cases/positive/gradedBase1.gr
language GradedBase

id : forall {a : Type} . a ^ 1 -> a
id x = x

copy : forall {a : Type} . a ^ 2 -> (a, a)
copy x = (x, x)